# mysql-gui-client-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  main.go  server.go  shell.nix  user.go
client/: main.go
client-flutter/: pubspec.yaml
client-flutter/android/app/src/main/: AndroidManifest.xml
client-flutter/integration_test/: main.dart
client-flutter/ios/Runner/: Info.plist
client-flutter/lib/: main.dart
client-flutter/lib/states/: sys_ctl.dart
client-flutter/lib/utils/: request.dart  tuple.dart
client-flutter/lib/views/: a.dart  b.dart  c.dart  d.dart  e.dart  home.dart
client-flutter/lib/views/auth/: find_passwd.dart  login.dart  phone.dart  register.dart
client-flutter/lib/views/profile/: profile.dart
client-flutter/lib/views/profile/setting/: setting.dart
client-flutter/lib/views/tabPage/: off_topic_code.dart  tab1.dart
client-flutter/lib/views/tabPage/chat/: detail.dart  tab2.dart
client-flutter/rust/: Cargo.toml  build.rs
client-flutter/rust/src/: api.rs  bridge_generated.rs
client-flutter/web/: index.html
client-rs/: .env  .gitignore  Cargo.toml  README.md  start_web.sh
client-rs/examples/: gamepad_test.rs
client-rs/src/: app.rs  apps.rs  backend.rs  config.rs  font.rs  frontend.rs  lib.rs  main.rs  router.rs  server.rs  service.rs  ui.rs  util.rs
client-rs/src/api/: article.rs  mod.rs
client-rs/src/app/: article.rs  component.rs  database.rs  setting.rs  talk.rs
client-rs/src/app/database/: config_new_conn.rs  table.rs
client-rs/src/apps/: article.rs  database.rs  mod.rs  setting.rs  talk.rs
client-rs/src/apps/article/: article.rs
client-rs/src/apps/database/: component.rs  config_new_conn.rs  database.rs  table.rs  tabwindow.rs
client-rs/src/apps/pages/: mod.rs  setting.rs  talk.rs
client-rs/src/backend/: article.rs  database.rs
client-rs/src/backend/database/: datatype.rs  message.rs  sqls.rs
client-rs/src/client/: api.rs  message.rs  mod.rs
client-rs/src/frontend/: article.rs  database.rs  setting.rs  talk.rs
client-rs/src/frontend/database/: config_new_conn.rs  sidebar.rs  table.rs  types.rs
client-rs/src/pages/: article.rs  database.rs  headline.rs  list.rs  mod.rs  scroll.rs  setting.rs  talk.rs  test.rs
client-rs/src/pages/database/: database.rs  mod.rs  table.rs
client-rs/src/server/: database.rs  mod.rs
client-rs/src/server/api/: article.rs  mysql.rs
client-rs/src/server/article/: entity.rs
client-rs/src/server/database/: message.rs  sqls.rs
client-rs/src/server/entity/: article.rs
client-rs/src/service/: api.rs  article.rs  database.rs  entity.rs
client-rs/src/service/api/: article.rs  mysql.rs
client-rs/src/service/database/: datatype.rs  entity.rs  message.rs  sqls.rs
client-rs/src/theme/: colors.rs  font.rs  mod.rs  style.rs  text.rs
client-rs/src/ui/: article.rs  test.rs
client-rs/src/ui/components/: mod.rs  tab.rs
client-rs/src/ui/database/: config_new_conn.rs  sidebar.rs  table.rs
client-rs/src/util/: duplex_channel.rs  mod.rs
client-rs/web/: client_rs.js  index.html
examples/: sqlx_test.rs
proto/: abi.proto
server/: server.go
server-go/: go.mod
server-go/chan/: main.go
server-go/client/: main.go
server-go/server/: main.go  user.go
src/: theme.rs
src/server/: database.rs  talk.rs
src/server/article/: api.rs
src/theme/: colors.rs  font.rs
src/ui/: database.rs
src/ui/database/: config_new_conn.rs  types.rs
src/util/: bindable.rs
tonic-live/: Cargo.toml  build.rs
tonic-live/examples/: client.rs
tonic-live/src/: client.rs  lib.rs  server.rs
tonic-live/src/pb/: abi.rs  mod.rs
