[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.18", features = ["persistence"] }
egui_extras = { version = "0.18", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rust_decimal = "1"
bigdecimal = "0.3"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mysql", "decimal", "chrono"] }
chrono = "0.4"
confy = "0.4"
reqwest = { version = "0.11", features = ["json"] }
ureq = { version = "2.4", features = ["json"] }

[profile.release]
code-units = 1
strip = true
lto = true
opt-level = 2