[package]
name = "client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 核心
eframe = { version = "0.18", features = ["persistence"] }
egui_extras = { version = "0.18", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 错误处理
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"

# 持久化 / 状态保存
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.6", optional = true, features = ["runtime-tokio-rustls", "mysql", "decimal", "chrono"] }
chrono = "0.4"
rust_decimal = "1"
bigdecimal = "0.3"

# 文章
reqwest = { version = "0.11", features = ["json"] }
ureq = { version = "2.4", features = ["json"] }

[profile.release]
code-units = 1
strip = true
lto = true
opt-level = 2
overflow-checks = false

[features]
default = ["database", "article"]
article = []
database = ["sqlx"]
talk = []
dev = []