[package]
name = "tonic-live"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7"
tokio = { version = "1", features = ["full"] }
prost = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
tokio-stream = "0.1"
dashmap = "5.3"
anyhow = "1.0"
arc-swap = "1.5"
lazy_static = "1.4"

[build-dependencies]
tonic-build = "0.7"
