[package]
name = "flutter_rust_bridge_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_rust_bridge_example"
crate-type = ["cdylib"]

[build-dependencies]
flutter_rust_bridge_codegen = "1.41.3"

[dependencies]
anyhow = { version = "1.0.62", features = ["backtrace"] }
flutter_rust_bridge = "1.41.3"
num = "0.4" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
image = "0.24.3" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.
crossbeam = "0.8" # unrelated to Flutter Rust Bridge. Used only to draw beautiful photos.